--- a/TenDrum.css
+++ b/TenDrum.css
@@ -41,7 +41,7 @@ footer {
 }
 
 body {
-  background-color: #efe5cb;
+  background-color: #e9e1d2;
 }
 
 .Nav {
@@ -55,15 +55,19 @@ body {
 }
 
 .Nav .Logo-pic {
-  width: 30%;
+  width: 45%;
 }
 
-.Nav .Menu-group {
-  width: 45%;
+.Nav .left-group {
+  width: 55%;
+}
+
+.Nav .left-group .Menu-group {
+  width: 100%;
   margin-right: 30px;
   text-align: center;
   font-size: 20px;
-  font-weight: 300;
+  font-weight: 540;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -74,11 +78,11 @@ body {
   text-rendering: optimizeLegibility;
 }
 
-.Nav .Menu-group .index-btn {
+.Nav .left-group .Menu-group .index-btn {
   width: 100%;
 }
 
-.Nav .Menu-group .index-btn:hover {
+.Nav .left-group .Menu-group .index-btn:hover {
   cursor: pointer;
 }
 
@@ -100,7 +104,7 @@ body {
   }
 }
 
-.Nav .Menu-group .btn {
+.Nav .left-group .Menu-group .btn {
   overflow: visible;
   margin: 0;
   padding: 0;
@@ -113,25 +117,27 @@ body {
   text-decoration: none;
   text-transform: uppercase;
   padding: 5px;
-  background-color: #fff;
+  margin: 0 5px;
+  background-color: #efefef;
   color: #7f5f43;
+  font-weight: 540;
   border: 2px solid #7f5f43;
-  border-radius: 6px;
+  border-radius: 10px;
   -webkit-transition: all 0.5s ease;
   transition: all 0.5s ease;
 }
 
-.Nav .Menu-group .btn:-moz-focus-inner {
+.Nav .left-group .Menu-group .btn:-moz-focus-inner {
   padding: 0;
   border: 0;
 }
 
-.Nav .Menu-group .btn--stripe {
+.Nav .left-group .Menu-group .btn--stripe {
   overflow: hidden;
   position: relative;
 }
 
-.Nav .Menu-group .btn--stripe:after {
+.Nav .left-group .Menu-group .btn--stripe:after {
   content: "";
   display: block;
   height: 7px;
@@ -146,28 +152,52 @@ body {
   background-size: 7px 7px;
 }
 
-.Nav .Menu-group .btn--stripe:hover {
+.Nav .left-group .Menu-group .btn--stripe:hover {
   background-color: #7f5f43;
   color: #ffffff;
   border-color: #d3a53f;
 }
 
-.Nav .Menu-group .btn--stripe:hover:after {
+.Nav .left-group .Menu-group .btn--stripe:hover:after {
   background-image: repeating-linear-gradient(45deg, #ffffff, #ffffff 1px, transparent 2px, transparent 5px);
   border-top: 1px solid #d3a53f;
   -webkit-animation: stripe-slide 12s infinite linear forwards;
           animation: stripe-slide 12s infinite linear forwards;
 }
 
+.Nav .left-group .cloud-group {
+  position: relative;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.Nav .left-group .cloud-group .cloud {
+  width: 20%;
+  position: absolute;
+}
+
+.Nav .left-group .cloud-group .cloud01 {
+  right: 60%;
+  top: 150px;
+}
+
+.Nav .left-group .cloud-group .cloud02 {
+  right: 40%;
+  top: 300px;
+}
+
 .big-img {
   position: absolute;
   bottom: 0;
-  background-image: url("./img/十鼓描圖-上色2版拷貝.jpg");
+  z-index: -1;
+  background-image: url("./img/首頁圖-02.png");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
-  min-height: 48vh;
+  height: 50vh;
 }
 
 .hamburger {
@@ -587,14 +617,21 @@ body {
   line-height: 50%;
   text-align: center;
   border: 0;
+  -webkit-transition: 0.1s;
+  transition: 0.1s;
 }
 
 .btn-groupxxx .btnsss .btns .btn:hover {
   background-color: #d4a63f;
+  color: #efefef;
 }
 
 .btn-groupxxx .btnsss .btns .btn h1 {
   color: #4d483d;
+}
+
+.btn-groupxxx .btnsss .btns .btn h1:hover {
+  color: #efefef;
 }
 
 .btn-groupxxx .btnsss .infor {
@@ -697,27 +734,15 @@ body {
   color: #f7f8f8;
 }
 
-#fullpage .section .about-text-bacimg {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  justify-items: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-}
-
-#fullpage .section .about-text-bacimg .about-title {
+#fullpage .section .about-title {
   width: 75%;
-  font-size: 50px;
+  font-size: 40px;
   line-height: 80px;
   margin-left: 55%;
   margin-top: 9%;
 }
 
-#fullpage .section .about-text-bacimg .about-text {
-  width: 100%;
+#fullpage .section .about-text-bacimg {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -726,22 +751,22 @@ body {
           justify-content: center;
   -ms-flex-line-pack: center;
       align-content: center;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  font-size: 24px;
-  text-align: left;
+  -ms-flex-item-align: center;
+      align-self: center;
 }
 
-#fullpage .section .about-text-bacimg .about-text .about-con {
+#fullpage .section .about-text-bacimg .about-text {
+  width: 900px;
+  font-size: 24px;
+  text-align: left;
   margin-top: 10%;
-  width: 40%;
 }
 
 #fullpage .section .about-text-bacimg .about-2-text {
   width: 40%;
   margin-top: 0;
   margin-bottom: 150px;
-  margin-left: 35%;
+  margin-left: 10%;
   margin-top: 5%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -779,7 +804,7 @@ body {
 }
 
 #fullpage .section .intro-container .con-color-2 {
-  background: #D4A63F;
+  background: #d4a63f;
 }
 
 #fullpage .section .intro-container .intro-con {
@@ -832,6 +857,8 @@ body {
 }
 
 #fullpage .section .sec {
+  margin: auto;
+  width: 100%;
   height: 100vh;
   background-position: center;
   background-repeat: no-repeat;
@@ -847,7 +874,7 @@ body {
 }
 
 #fullpage .sec-01 .sec-01-1 {
-  background-image: url("./img/關於背景1002試用-小-04_工作區域4.svg");
+  background-image: url("./img/主頁背景/簡介_工作區域 1.jpg");
 }
 
 #fullpage .sec-02 {
@@ -880,10 +907,11 @@ body {
 
 .New {
   width: 100%;
+  height: 100vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  background-color: #efe5cb;
+  background-image: url("./img/主頁背景/news 背景.jpg");
 }
 
 .New .new-title {
@@ -1028,5 +1056,134 @@ body {
 
 .New .new-contexts .actt {
   display: block;
+}
+
+.Rented {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.Rented .button-bar {
+  height: calc(100vh - 30px);
+  width: 20%;
+  background-color: antiquewhite;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.Rented .button-bar .button-g {
+  height: 50%;
+  width: 50%;
+  background-color: #2835e9;
+  margin: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  text-align: center;
+}
+
+.Rented .button-bar .button-g .tittle {
+  height: 20%;
+  width: 100%;
+  background-color: #4fe928;
+  font-size: 36px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.Rented .button-bar .button-g .lease-box {
+  height: 20%;
+  width: 100%;
+  background-color: #e9289f;
+  font-size: 32px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.Rented .button-bar .button-g .lease-box .text-box {
+  width: 80%;
+  background-color: chocolate;
+  line-height: 36px;
+  font-size: 30px;
+  text-align: start;
+  margin: auto;
+}
+
+.Rented .photo-R {
+  height: calc(100vh - 30px);
+  width: 80%;
+  background-color: #e95f28;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.Rented .photo-R .photo {
+  height: 80%;
+  width: 100%;
+  background-color: #8c28e9;
+  /* ---輪播CSS--- */
+}
+
+.Rented .photo-R .photo .swiper-container {
+  width: 100%;
+  height: 100%;
+}
+
+.Rented .photo-R .photo .swiper-container .swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #a74444;
+  /* Center slide text vertically */
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.Rented .photo-R .photo .swiper-container .swiper-pagination-bullet {
+  width: 30px;
+  height: 30px;
+  background-color: #d89696;
+}
+
+.Rented footer {
+  width: 100%;
+  height: 30px;
+  background-color: #b15821;
+  margin: auto;
+  color: #f7f8f8;
+  font-size: 16px;
+  text-align: center;
+  line-height: 30px;
 }
 /*# sourceMappingURL=TenDrum.css.map */
