--- a/_About.scss
+++ b/_About.scss
@@ -42,33 +42,26 @@
         }
       }
       ///關於十鼓及園區介紹樣式///
-
+      .about-title {
+        width: 75%;
+        font-size: 40px;
+        line-height: 80px;
+        margin-left: 55%;
+        margin-top: 9%;
+      }
       ///簡介內容///
       .about-text-bacimg {
         display: flex;
-        justify-items: center;
-        flex-direction: column;
-
-        .about-title {
-          width: 75%;
-          font-size: 50px;
-          line-height: 80px;
-          margin-left: 55%;
-          margin-top: 9%;
-        }
+        justify-content: center;
+        align-content: center;
+        align-self: center;
 
         .about-text {
-          width: 100%;
-          display: flex;
-          justify-content: center;
-          align-content: center;
-          flex-wrap: wrap;
+          width: 900px;
+          // flex-wrap: wrap;
           font-size: 24px;
           text-align: left;
-          .about-con {
-            margin-top: 10%;
-            width: 40%;
-          }
+          margin-top: 10%;
         }
 
         ///沿革內容調整完成///
@@ -76,7 +69,7 @@
           width: 40%;
           margin-top: 0;
           margin-bottom: 150px;
-          margin-left: 35%;
+          margin-left: 10%;
           margin-top: 5%;
           display: flex;
 
@@ -106,17 +99,17 @@
           padding: 1px;
           border-bottom: 1px solid #b15821;
         }
-        .con-color-1{
+        .con-color-1 {
           background-color: #0b6c6d;
         }
-        .con-color-2{
-          background: #D4A63F;
+        .con-color-2 {
+          background: #d4a63f;
         }
         .intro-con {
           text-align: left;
           width: 50%;
           height: 50vh;
-          
+
           border-radius: 10%;
           padding: 20px;
 
@@ -124,14 +117,12 @@
             margin: auto;
             width: 95%;
             height: 150px;
-            
           }
           .img-self-1 {
             width: 95%;
             background-color: #d0b975;
           }
-          .img-self-2{
-
+          .img-self-2 {
           }
           .intro-con-box {
             .intro-con-box-title {
@@ -164,6 +155,8 @@
       }
       ///中間背景圖樣式///
       .sec {
+        margin: auto;
+        width: 100%;
         height: 100vh;
         background-position: center;
         background-repeat: no-repeat;
@@ -179,7 +172,8 @@
     .sec-01 {
       background-color: #d4a63f;
       .sec-01-1 {
-        background-image: url("./img/關於背景1002試用-小-04_工作區域4.svg");
+        // background-image: url('./img/簡介背景-02.png');
+        background-image: url("./img/主頁背景/簡介_工作區域\ 1.jpg");
       }
     }
     .sec-02 {
