--- a/_Rented.scss
+++ b/_Rented.scss
@@ -1,3 +1,93 @@
 @mixin Rented() {
-    
+    .Rented {
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        .button-bar {
+            height: calc(100vh - 30px);
+            width: 20%;
+            background-color: antiquewhite;
+            display: flex;
+            .button-g {
+                height: 50%;
+                width: 50%;
+                background-color: rgb(40, 53, 233);
+                margin: auto;
+                display: flex;
+                flex-wrap: wrap;
+                text-align: center;
+                .tittle {
+                    height: 20%;
+                    width: 100%;
+                    background-color: rgb(79, 233, 40);
+                    font-size: 36px;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                }
+                .lease-box {
+                    height: 20%;
+                    width: 100%;
+                    background-color: rgb(233, 40, 159);
+                    font-size: 32px;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    .text-box {
+                        width: 80%;
+                        background-color: chocolate;
+                        line-height: 36px;
+                        font-size: 30px;
+                        text-align: start;
+                        margin: auto;
+                    }
+                }
+            }
+        }
+
+        .photo-R {
+            height: calc(100vh - 30px);
+            width: 80%;
+            background-color: rgb(233, 95, 40);
+            display: flex;
+            align-items: center;
+            .photo {
+                height: 80%;
+                width: 100%;
+                background-color: rgb(140, 40, 233);
+                /* ---輪播CSS--- */
+
+                .swiper-container {
+                    width: 100%;
+                    height: 100%;
+                    .swiper-slide {
+                        text-align: center;
+                        font-size: 18px;
+                        background: rgb(167, 68, 68);
+
+                        /* Center slide text vertically */
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                    }
+                    .swiper-pagination-bullet {
+                        width: 30px;
+                        height: 30px;
+                        background-color: rgb(216, 150, 150);
+                    }
+                }
+            }
+        }
+
+        footer {
+            width: 100%;
+            height: 30px;
+            background-color: #b15821;
+            margin: auto;
+            color: #f7f8f8;
+            font-size: 16px;
+            text-align: center;
+            line-height: 30px;
+        }
+    }
 }
