--- a/CSS/TenDrum.css
+++ b/CSS/TenDrum.css
@@ -1181,7 +1181,7 @@ footer {
   font-size: 24px;
   text-align: center;
   line-height: 110px;
-  background-image: url("./img/插圖/設施體驗的雲2.png");
+  background-image: url("../img/插圖/設施體驗的雲2.png");
   background-position: center;
   background-size: contain;
   background-repeat: no-repeat;
