--- a/CSS/_Drum.scss
+++ b/CSS/_Drum.scss
@@ -1,3 +1,168 @@
 @mixin Drum() {
-    
+    .Drum {
+        width: 100%;
+        min-height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 2em 0;
+        line-height: 1.5em;
+        // 項目清單
+        .Drum-title-group {
+            width: 20%;
+            .drum--big-title {
+            }
+            .drum-mid-title {
+            }
+        }
+    }
+    // 項目清單
+    // 翻書效果
+    .book {
+        transition: opacity 0.4s 0.2s;
+    }
+
+    .page {
+        width: 30vw;
+        height: 50vw;
+        background-color: #111111;
+        float: left;
+        margin-bottom: 0.5em;
+        background: left top no-repeat;
+        background-size: cover;
+        .page-text {
+            width: 100%;
+            padding: 10px;
+            h3 {
+                width: 100%;
+                height: 50px;
+                line-height: 50px;
+                text-align: center;
+                color: #f7f8f8;
+                margin-top: 20px;
+                margin-bottom: 30px;
+                background-color: #0b6c6d;
+            }
+            h6 {
+                width: 100%;
+                font-weight: unset;
+                display: flex;
+                .text-time {
+                    width: 15%;
+                    height: 100%;
+                }
+                .text-con {
+                    width: 85%;
+                }
+            }
+        }
+        .page-img {
+            width: 100%;
+            height: 100%;
+        }
+    }
+    .page:nth-child(even) {
+        clear: both;
+    }
+    .book {
+        perspective: 250vw;
+    }
+    .book .pages {
+        width: 60vw;
+        height: 50vw;
+        position: relative;
+        transform-style: preserve-3d;
+        backface-visibility: hidden;
+        border-radius: 4px;
+        /*box-shadow: 0 0 0 1px #e3dfd8;*/
+    }
+    .book .page {
+        float: none;
+        clear: none;
+        margin: 0;
+        position: absolute;
+        top: 0;
+        width: 30vw;
+        height: 50vw;
+        transform-origin: 0 0;
+        transition: transform 1.4s;
+        backface-visibility: hidden;
+        transform-style: preserve-3d;
+        cursor: pointer;
+        user-select: none;
+        background-color: #f0f0f0;
+    }
+    .book .page:before {
+        content: "";
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        background: rgba(0, 0, 0, 0);
+        transition: background 0.7s;
+        z-index: 2;
+    }
+    .book .page:nth-child(odd) {
+        pointer-events: all;
+        transform: rotateY(0deg);
+        right: 0;
+        border-radius: 0 4px 4px 0;
+        background-image: linear-gradient(to right, rgba(0, 0, 0, 0.15) 0%, rgba(0, 0, 0, 0) 10%);
+    }
+    .book .page:nth-child(odd):hover {
+        transform: rotateY(-15deg);
+    }
+    .book .page:nth-child(odd):hover:before {
+        background: rgba(0, 0, 0, 0.03);
+    }
+    .book .page:nth-child(odd):before {
+        background: rgba(0, 0, 0, 0);
+    }
+    .book .page:nth-child(even) {
+        pointer-events: none;
+        transform: rotateY(180deg);
+        transform-origin: 100% 0;
+        left: 0;
+        border-radius: 4px 0 0 4px;
+        border-color: black;
+        background-image: linear-gradient(to left, rgba(0, 0, 0, 0.12) 0%, rgba(0, 0, 0, 0) 10%);
+    }
+    .book .page:nth-child(even):before {
+        background: rgba(0, 0, 0, 0.2);
+    }
+    .book .page.grabbing {
+        transition: none;
+    }
+    .book .page.flipped:nth-child(odd) {
+        pointer-events: none;
+        transform: rotateY(-180deg);
+    }
+    .book .page.flipped:nth-child(odd):before {
+        background: rgba(0, 0, 0, 0.2);
+    }
+    .book .page.flipped:nth-child(even) {
+        pointer-events: all;
+        transform: rotateY(0deg);
+    }
+    .book .page.flipped:nth-child(even):hover {
+        transform: rotateY(15deg);
+    }
+    .book .page.flipped:nth-child(even):hover:before {
+        background: rgba(0, 0, 0, 0.03);
+    }
+    .book .page.flipped:nth-child(even):before {
+        background: rgba(0, 0, 0, 0);
+    }
+    *,
+    * :before,
+    *:after {
+        box-sizing: border-box;
+    }
+
+    .page:nth-child(odd) {
+        background-position: right top;
+    }
+
+    // 翻書效果
 }
