--- a/CSS/TenDrum.css
+++ b/CSS/TenDrum.css
@@ -734,236 +734,6 @@ footer {
   bottom: 20px;
 }
 
-#fullpage .section {
-  width: 100%;
-  height: 100vh;
-  text-align: center;
-  background-color: #d0b975;
-}
-
-#fullpage .section .About {
-  width: 100%;
-}
-
-#fullpage .section .About .en-title {
-  margin-left: 1%;
-}
-
-#fullpage .section .About .en-title .About-t {
-  font-size: 150px;
-  font-family: "Fredericka the Great", cursive;
-  color: #231815;
-}
-
-#fullpage .section .About .en-title u {
-  font-size: 30px;
-}
-
-#fullpage .section .About .en-title .line01 {
-  color: #b15821;
-  font-size: 30px;
-}
-
-#fullpage .section .About .cn-title {
-  margin-left: 33%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: baseline;
-      -ms-flex-align: baseline;
-          align-items: baseline;
-  font-size: 120px;
-  color: #231815;
-}
-
-#fullpage .section .About .cn-title .big-size {
-  font-size: 150px;
-}
-
-#fullpage .section .About .cn-title .line02 {
-  color: #0b6c6d;
-  font-size: 30px;
-}
-
-#fullpage .section .about-title {
-  width: 75%;
-  font-size: 40px;
-  line-height: 80px;
-  margin-left: 55%;
-  margin-top: 9%;
-}
-
-#fullpage .section .about-text-bacimg {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -ms-flex-line-pack: center;
-      align-content: center;
-  -ms-flex-item-align: center;
-      align-self: center;
-}
-
-#fullpage .section .about-text-bacimg .about-text {
-  width: 900px;
-  font-size: 24px;
-  text-align: left;
-  margin-top: 10%;
-}
-
-#fullpage .section .about-text-bacimg .about-2-text {
-  width: 40%;
-  margin-top: 0;
-  margin-bottom: 150px;
-  margin-left: 10%;
-  margin-top: 5%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  font-size: 20px;
-  text-align: left;
-}
-
-#fullpage .section .about-text-bacimg .about-2-text .text-wrap {
-  padding: 0 10px;
-  width: 50%;
-}
-
-#fullpage .section .about-text-bacimg .text-color-F7F8F8 {
-  color: #f7f8f8;
-}
-
-#fullpage .section .intro-container {
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-#fullpage .section .intro-container .intro-title {
-  width: 20%;
-  font-size: 76px;
-  height: 100px;
-  padding: 1px;
-  border-bottom: 1px solid #b15821;
-}
-
-#fullpage .section .intro-container .con-color-1 {
-  background-color: #0b6c6d;
-}
-
-#fullpage .section .intro-container .con-color-2 {
-  background: #d4a63f;
-}
-
-#fullpage .section .intro-container .intro-con {
-  text-align: left;
-  width: 50%;
-  height: 50vh;
-  border-radius: 10%;
-  padding: 20px;
-}
-
-#fullpage .section .intro-container .intro-con .intro-con-img {
-  margin: auto;
-  width: 95%;
-  height: 150px;
-}
-
-#fullpage .section .intro-container .intro-con .img-self-1 {
-  width: 95%;
-  background-color: #d0b975;
-}
-
-#fullpage .section .intro-container .intro-con .intro-con-box .intro-con-box-title {
-  font-size: 24px;
-}
-
-#fullpage .section .intro-container .intro-con .intro-con-box .intro-con-box-text {
-  font-size: 20px;
-}
-
-#fullpage .section .intro-container .intro-con .intro-con-box .intro-con-icon-dis {
-  margin-top: 10%;
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
-}
-
-#fullpage .section .intro-container .intro-con .intro-con-box .intro-con-icon-dis .intro-con-icon {
-  width: 10%;
-  height: 30px;
-  font-size: 20px;
-  color: #f7f8f8;
-  line-height: 30px;
-  text-align: center;
-  background: #d4a63f;
-  border-radius: 10px;
-}
-
-#fullpage .section .sec {
-  margin: auto;
-  width: 100%;
-  height: 100vh;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-#fullpage .sec-00 {
-  background-color: #ebe3d4;
-}
-
-#fullpage .sec-00 .sec-00-1 {
-  width: 100%;
-  background-image: url("../img/插圖/兩人尬鼓.png");
-  background-repeat: no-repeat;
-}
-
-#fullpage .sec-01 {
-  background-color: #d4a63f;
-}
-
-#fullpage .sec-01 .sec-01-1 {
-  background-image: url("../img/主頁背景/簡介_工作區域 1.jpg");
-}
-
-#fullpage .sec-02 {
-  background-color: #e9c37c;
-}
-
-#fullpage .sec-02 .sec-02-1 {
-  background-image: url("../img/關於背景1002試用-小-06_工作區域6.svg");
-}
-
-#fullpage .sec-03 {
-  background-color: #d0b975;
-}
-
-#fullpage .sec-03 .sec-03-1 {
-  background-image: url("../img/設計稿 降轉10-02-核心價值_工作區域7.svg");
-}
-
-#fullpage .sec-04 {
-  background-color: #e9c37c;
-}
-
-#fullpage .sec-05 {
-  background-color: #ebe3d4;
-}
-
-#fullpage .sec-05 .sec-05-00 {
-  background-image: url("../img/插圖/飛人 上色.png");
-  background-position: center;
-  background-repeat: no-repeat;
-}
-
 .New {
   width: 100%;
   height: 100vh;
@@ -1629,52 +1399,53 @@ a {
   overflow: hidden;
 }
 
-#apple_effect .parallax_window .effect_box .About {
+#apple_effect .parallax_window .effect_box .footer {
   width: 100%;
+  position: -webkit-sticky;
+  position: sticky;
+  bottom: 0;
+  background-color: rgba(177, 88, 33, 0.1);
+  height: 42px;
+  color: #595757;
+  text-align: center;
+  line-height: 42px;
+  z-index: 10;
+}
+
+#apple_effect .parallax_window .effect_box .About {
+  padding: 50px;
+  width: 90%;
   height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -ms-flex-line-pack: center;
-      align-content: center;
-}
-
-#apple_effect .parallax_window .effect_box .About .cn-title {
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: baseline;
-      -ms-flex-align: baseline;
-          align-items: baseline;
-  font-size: 80px;
-  color: #231815;
-}
-
-#apple_effect .parallax_window .effect_box .About .cn-title .big-size {
-  font-size: 100px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
 }
 
 #apple_effect .parallax_window .effect_box .about-title {
-  width: 75%;
+  margin-top: 15%;
+  width: 50%;
   font-size: 40px;
   height: 60px;
   line-height: 60px;
+  text-align: center;
+  color: #673a1b;
 }
 
 #apple_effect .parallax_window .effect_box .about-text {
-  width: 65%;
+  width: 50%;
   font-size: 24px;
   text-align: left;
 }
 
 #apple_effect .parallax_window .effect_box .about-2-text {
-  width: 40%;
+  width: 50%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1687,79 +1458,143 @@ a {
   width: 50%;
 }
 
-#apple_effect .parallax_window .effect_box .intro-container {
-  width: 100%;
+#apple_effect .parallax_window .effect_box .About-02 {
+  padding: 50px;
+  width: 90%;
+  height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-#apple_effect .parallax_window .effect_box .intro-container .intro-title {
-  width: 20%;
-  font-size: 76px;
-  height: 100px;
-  padding: 1px;
-  border-bottom: 1px solid #b15821;
-}
-
-#apple_effect .parallax_window .effect_box .intro-container .con-color-1 {
-  background-color: #0b6c6d;
-}
-
-#apple_effect .parallax_window .effect_box .intro-container .con-color-2 {
-  background: #d4a63f;
-}
-
-#apple_effect .parallax_window .effect_box .intro-container .intro-con {
+#apple_effect .parallax_window .effect_box .About-02 .about-title-02 {
+  margin-top: 0;
+  width: 15%;
+  font-size: 40px;
+  height: 60px;
+  line-height: 60px;
   text-align: left;
-  width: 50%;
-  height: 50vh;
-  border-radius: 10%;
-  padding: 20px;
+  color: #673a1b;
 }
 
-#apple_effect .parallax_window .effect_box .intro-container .intro-con .intro-con-img {
-  margin: auto;
-  width: 95%;
-  height: 150px;
-}
-
-#apple_effect .parallax_window .effect_box .intro-container .intro-con .img-self-1 {
-  width: 95%;
-  background-color: #d0b975;
-}
-
-#apple_effect .parallax_window .effect_box .intro-container .intro-con .intro-con-box .intro-con-box-title {
-  font-size: 24px;
-}
-
-#apple_effect .parallax_window .effect_box .intro-container .intro-con .intro-con-box .intro-con-box-text {
-  font-size: 20px;
-}
-
-#apple_effect .parallax_window .effect_box .intro-container .intro-con .intro-con-box .intro-con-icon-dis {
-  margin-top: 10%;
-  width: 100%;
+#apple_effect .parallax_window .effect_box .about-3-text {
+  width: 75%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
+  font-size: 20px;
+  text-align: left;
 }
 
-#apple_effect .parallax_window .effect_box .intro-container .intro-con .intro-con-box .intro-con-icon-dis .intro-con-icon {
-  width: 10%;
-  height: 30px;
-  font-size: 20px;
-  line-height: 30px;
-  text-align: center;
-  background: #d4a63f;
-  border-radius: 10px;
+#apple_effect .parallax_window .effect_box .about-3-text .text-3-wrap {
+  width: 37.5%;
+  /* The actual timeline (the vertical ruler) */
+  /* Media queries - Responsive timeline on screens less than 600px wide */
+}
+
+#apple_effect .parallax_window .effect_box .about-3-text .text-3-wrap .timeline {
+  position: relative;
+  width: 100%;
+  color: #231815;
+  /* Container around time-content */
+  /* The circles on the timeline */
+  /* Place the time-container to the left */
+  /* Place the time-container to the right */
+  /* Add arrows to the right time-container (pointing left) */
+  /* Fix the circle for time-containers on the right side */
+}
+
+#apple_effect .parallax_window .effect_box .about-3-text .text-3-wrap .timeline .time-container {
+  padding: 10px 40px;
+  position: relative;
+}
+
+#apple_effect .parallax_window .effect_box .about-3-text .text-3-wrap .timeline .time-container::after {
+  content: "";
+  position: absolute;
+  width: 25px;
+  height: 25px;
+  right: -17px;
+  background-color: #6a3906;
+  border: 4px solid #ff9f55;
+  top: 40px;
+  border-radius: 50%;
+  z-index: 1;
+  /* The actual time-content */
+}
+
+#apple_effect .parallax_window .effect_box .about-3-text .text-3-wrap .timeline .time-container::after .time-content {
+  width: 100%;
+  padding: 20px 20px;
+  background-color: white;
+  position: relative;
+  border-radius: 6px;
+}
+
+#apple_effect .parallax_window .effect_box .about-3-text .text-3-wrap .timeline .right {
+  left: 50%;
+}
+
+#apple_effect .parallax_window .effect_box .about-3-text .text-3-wrap .timeline .right::before {
+  content: " ";
+  height: 0;
+  position: absolute;
+  top: 22px;
+  width: 0;
+  z-index: 1;
+  left: 30px;
+  border: medium solid #6a3906;
+  border-width: 10px 10px 10px 0;
+  border-color: transparent white transparent transparent;
+}
+
+#apple_effect .parallax_window .effect_box .about-3-text .text-3-wrap .timeline .right::after {
+  left: -16px;
+}
+
+#apple_effect .parallax_window .effect_box .about-3-text .text-3-wrap .timeline::after {
+  content: "";
+  position: absolute;
+  width: 6px;
+  background-color: #6a3906;
+  top: 0;
+  bottom: 0;
+  left: 50%;
+  margin-left: -3px;
+}
+
+@media screen and (max-width: 600px) {
+  #apple_effect .parallax_window .effect_box .about-3-text .text-3-wrap {
+    /* Place the timelime to the left */
+    /* Full-width time-containers */
+    /* Make sure that all arrows are pointing leftwards */
+    /* Make sure all circles are at the same spot */
+    /* Make all right time-containers behave like the left ones */
+  }
+  #apple_effect .parallax_window .effect_box .about-3-text .text-3-wrap .timeline::after {
+    left: 31px;
+  }
+  #apple_effect .parallax_window .effect_box .about-3-text .text-3-wrap .time-container {
+    width: 100%;
+    padding-left: 70px;
+    padding-right: 25px;
+  }
+  #apple_effect .parallax_window .effect_box .about-3-text .text-3-wrap .time-container::before {
+    left: 60px;
+    border: medium solid white;
+    border-width: 10px 10px 10px 0;
+    border-color: transparent white transparent transparent;
+  }
+  #apple_effect .parallax_window .effect_box .about-3-text .text-3-wrap .left::after,
+  #apple_effect .parallax_window .effect_box .about-3-text .text-3-wrap .right::after {
+    left: 15px;
+  }
+  #apple_effect .parallax_window .effect_box .about-3-text .text-3-wrap .right {
+    left: 0%;
+  }
 }
 
 #apple_effect .parallax_window .effect_box .sec {
-  margin: auto;
   width: 100%;
   height: 100vh;
   background-position: center;
@@ -1767,11 +1602,23 @@ a {
   background-size: cover;
 }
 
-#apple_effect .parallax_window .effect_box .sec-00 {
+#apple_effect .parallax_window .effect_box .sec-01 {
   background-image: url("../img/插圖/關於十鼓-修正.jpg");
 }
 
+#apple_effect .parallax_window .effect_box .sec-02 {
+  background-image: url("../img/主頁背景/關於十鼓-背景.jpg");
+}
+
+#apple_effect .parallax_window .effect_box .sec-03 {
+  background-image: url("../img/主頁背景/沿革-背景.jpg");
+}
+
+#apple_effect .parallax_window .effect_box .sec-04 {
+  background-image: url("../img/主頁背景/發展年表-背景.jpg");
+}
+
 #apple_effect .parallax_window .effect_box .sec-05 {
-  background-image: url("../img/插圖/飛人 上色.png");
+  background-image: url("../img/主頁背景/核心價值-背景.jpg");
 }
 /*# sourceMappingURL=TenDrum.css.map */
