--- a/CSS/TenDrum.css
+++ b/CSS/TenDrum.css
@@ -1428,20 +1428,60 @@ a {
           align-items: flex-end;
 }
 
+#apple_effect .parallax_window .effect_box .About-03 {
+  padding: 50px;
+  width: 90%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
 #apple_effect .parallax_window .effect_box .about-title {
   margin-top: 15%;
   width: 50%;
   font-size: 40px;
   height: 60px;
   line-height: 60px;
-  text-align: center;
   color: #673a1b;
+  text-align: left;
 }
 
 #apple_effect .parallax_window .effect_box .about-text {
   width: 50%;
   font-size: 24px;
   text-align: left;
+}
+
+#apple_effect .parallax_window .effect_box .about-text-5-team {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+#apple_effect .parallax_window .effect_box .about-text-5-team .color-gray {
+  width: 8%;
+  height: 30px;
+  line-height: 30px;
+  font-size: 12px;
+  color: #b5b5b6;
+  margin-left: 10px;
+}
+
+#apple_effect .parallax_window .effect_box .about-text-5-team .about-text-5-text {
+  width: 90%;
+  color: #231815;
+  height: 30px;
+  line-height: 30px;
 }
 
 #apple_effect .parallax_window .effect_box .about-2-text {
@@ -1473,8 +1513,8 @@ a {
   font-size: 40px;
   height: 60px;
   line-height: 60px;
-  text-align: left;
   color: #673a1b;
+  text-align: left;
 }
 
 #apple_effect .parallax_window .effect_box .about-3-text {
